# sahara-ci-config

./: .gitignore  .gitreview  README.md  README.rst  requirements.txt  setup.cfg  tox.ini
config/: pip.conf
config/devstack/: local.sh  (+3 more)
host-scripts/: check_layout.py  check_layout.sh  cleanup.py  integration-cleanup.sh  sahara-ci-syntax-check.sh  update_config.sh
jenkins_job_builder/: ci-infra.yaml  defaults.yaml  devstack-gate.yaml  diskimage.yaml  jobs-updater.yaml  macros.yaml  misc.yaml  new-sahara.yaml  projects.yaml  publisher.yaml  python-jobs.yaml  sahara-ci-check.yaml  sahara-pypimirror.yaml  sahara-ui.yaml  sahara.yaml  savanna-ui.yaml  savanna.yaml  update-config.yaml  update-pool.yaml
slave-scripts/: apt-cacher.sh  cleanup.py  common_scritps.sh  credentials.conf  credentials.conf.sample  dib.sh  diskimage-creating-integration-new.sh  diskimage-creating-integration.sh  functions-common.sh  functions-dib.sh  functions.sh  gate-sahara-integration.sh  gate-sahara-pep8-trunk.sh  gate-sahara-tempest.sh  gate-sahara-tests.sh  gate-sahara.sh  gate-sahara_tests.sh  gate-saharaclient-integration-new.sh  gate-saharaclient-integration.sh  gate-saharaclient-tempest.sh  gate-saharaclient.sh  gate-savanna-integration-new.sh  gate-savanna-pep8-trunk.sh  gate-tempest.sh  gate-ui-tests.sh  integration-cleanup.sh  prepare_vm.py  publish-logs.sh  sahara-ci-syntax-check.sh  tempest.sh  update-config.sh  update_config.sh  update_jobs.sh  update_pool.sh
system-configs/: README.rst  functions.sh  install_projects.sh  install_requirements.sh  jenkins-plugins  prepare_host.sh
(+65 files in other folders)
